adds support for sorting, faceting
note: facet offset not yet supported
